testsuite/tests/rename/should_fail/T18021.stderr

T18021.hs:12:3: error: [GHC-53634]
    Out of scope type variable ‘a’ in the RHS of a family instance.
      All such variables must be bound on the LHS.

T18021.hs:17:3: error: [GHC-53634]
    Out of scope type variable ‘a’ in the RHS of a family instance.
      All such variables must be bound on the LHS.
